fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -897,21 +897,11 @@ div.farm-coin {
   padding: 20px;
 }
 
-.logo-desktop,
-.logo {
-  /* position: relative;
-  width: 100%;
-  height: 200px;
-  background-image: url(./assets/img/logo.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  top: 0px;
-  z-index: 2; */
+.logo-desktop {
   position: absolute;
   background: url(./assets/img/logo.png) no-repeat;
   background-size: contain;
-  z-index: 3;
+  z-index: 2;
   width: 140px;
   height: 100px;
   left: calc(50% - 25px);
@@ -1577,7 +1567,7 @@ div.farm-coin {
   position: absolute;
   background: url(./assets/img/static/counter.png) no-repeat;
   background-size: contain;
-  z-index: 3;
+  z-index: 2;
   width: 110px;
   height: 150px;
   left: calc(50% - 223px);
@@ -1750,16 +1740,7 @@ div.farm-coin {
     right: 5px;
   }
 
-  .logo {
-    display: none;
-  }
-
   .logo-desktop {
-    /* width: 100%;
-    height: 100px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center; */
     width: 98px;
     height: 70px;
     left: calc(50% - 68px);
